# mySkype

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt
include/: CallHandler.hpp  ContactRequestWidget.hpp  HomeScreen.hpp  LoginScreen.hpp  MainWindow.hpp  MyButton.hpp  MyWindow.hpp  TitledListWithButton.hpp
includes/: babel.hpp
includes/client/: AsioTCPClient.hpp  InputChecker.hpp  RequestHandler.hpp  UserHandler.hpp  babel.hpp
includes/client/Audio/: Audio.hpp  AudioDecoder.hpp  AudioEncoder.hpp  AudioError.hpp  AudioInput.hpp  AudioOutput.hpp  IAudioDecoder.hpp  IAudioEncoder.hpp  IAudioInput.hpp  IAudioOutput.hpp  SoundEncoded.hpp  SoundFrameBuffer.hpp
includes/client/Network/: DataPacketManager.hpp  Network.hpp  SoundPacketManager.hpp  TcpClient.hpp  Udp.hpp
includes/client/Windows/: AddContactWidget.hpp  CallHandler.hpp  CallScreen.hpp  Contact.hpp  ContactHandler.hpp  ContactRequestWidget.hpp  HomeScreen.hpp  ICallHandler.hpp  ListStrWidget.hpp  LoginScreen.hpp  Modal.hpp  MyWindow.hpp  TitledListWithButton.hpp
includes/server/: AsioTCPCli.hpp  AsioTCPServer.hpp  BabelServer.hpp  babel.hpp  call.hpp  utils.hpp
includes/server/Database/: Contact.hpp  ContactHandler.hpp  DatabaseManager.hpp  DatabaseManagerError.hpp  User.hpp  UserHandler.hpp
includes/server/Network/: AsioTCPCli.hpp  AsioTCPServer.hpp  ITCPCli.hpp  ITCPServer.hpp
src/: AddContactWidget.cpp  Audio.cpp  Audio.hpp  CallHandler.cpp  Codec.cpp  Codec.hpp  HomeScreen.cpp  LoginScreen.cpp  MainWindow.cpp  MyButton.cpp  MyWindow.cpp  TitledListWithButton.cpp  main.cpp  newMain.cpp
src/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.hpp
src/client/: AsioTCPClient.cpp  InputChecker.cpp  RequestHandler.cpp  UserHandler.cpp  main.cpp
src/client/Audio/: AudioDecoder.cpp  AudioEncoder.cpp  AudioError.cpp  AudioInput.cpp  AudioOutput.cpp  SoundEncoded.cpp  SoundFrameBuffer.cpp
src/client/Network/: DataPacketManager.cpp  SoundPacketManager.cpp  TcpClient.cpp  Udp.cpp
src/client/Windows/: AddContactWidget.cpp  CallHandler.cpp  CallScreen.cpp  Contact.cpp  ContactHandler.cpp  ContactRequestWidget.cpp  HomeScreen.cpp  ListStrWidget.cpp  LoginScreen.cpp  Modal.cpp  MyWindow.cpp  TitledListWithButton.cpp
src/server/: AsioTCPCli.cpp  AsioTCPServer.cpp  BabelServer.cpp  calls.cpp  commands.cpp  main.cpp  utils.cpp
src/server/Database/: Contact.cpp  ContactHandler.cpp  DatabaseManager.cpp  DatabaseManagerError.cpp  User.cpp  UserHandler.cpp
src/server/Network/: AsioTCPCli.cpp  AsioTCPServer.cpp
src/test_sqlite/: Database.cpp  Database.hpp  DatabaseError.cpp  DatabaseError.hpp  main.cpp
src/test_udp/: App.cpp  App.hpp  Console.cpp  Console.hpp  Udp.cpp  Udp.hpp  main.cpp
